# AIStudy

./: README.md
CBow/: cbow_read.py  cbow_train_embedding.py
RNN/: TextRNN.py  orogin_rnn.py  pyproject.toml  rnn_m21.py  text_rnn.pth  utils.py
