[tool.poetry]
name = "rnn"
version = "0.1.0"
description = ""
authors = ["gongjungjebiyudanja <73692488+YoungHyeon1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
numpy = "^1.26.4"
tqdm = "^4.66.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
